# basal

./: .pre-commit-config.yaml  LICENSE  README.md  TODO.md  icechunk-js-RO-ideas.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: benchmark_catalog.py  build_public_catalog.py
src/basal/: __init__.py  catalog.py  entry.py  history.py  inspect.py  schema.py  search.py  storage.py
tests/: test_core.py  test_extras.py  test_inspect.py  test_refactor.py
